# vdubakula_qdma_ip_drivers

./: README.md
bitstreams/: h10eval_cpm5_qdma_ctrl0_mm_4pf_252vf_g3x16_0519.pdi
bitstreams/2022.2/cpm4/: vck5000_cpm_qdma_mm_st_ddr_gen3x16_sriov_08022023.pdi  vck5000_cpm_qdma_mm_st_ddr_gen3x16_sriov_09082023.pdi  vck5000_cpm_qdma_mm_st_ddr_gen3x16_sriov_10022023.pdi  vck5000_cpm_qdma_mm_st_ddr_gen3x16_sriov_es2_06082023.pdi  vck5000_cpm_qdma_st_perf_gen3x16_09212023.pdi
bitstreams/2022.2/cpm5/: vpk120_cpm5_qdma_ctrl0_mm_st_4pf_252vf_dscbyp_g3x16_es2_10112022.pdi  vpk120_cpm5_qdma_ctrl0_mm_st_4pf_252vf_dscbyp_g3x16_es2_11012022.pdi  vpk120_cpm5_qdma_ctrl0_mm_st_perf_exdes_g3x16_es2_10202022_2.pdi  vpk120_cpm5_qdma_ctrl0_vf_4kq_es2_10282022.pdi
docs/project_plans/common/: cmp01-2000-0160.xml  pp01-2000-0160.xml  tp01-2000-0160.xml
docs/specifications/common/: Xilinx_Answer_34944_QDMA_Performance.docx  Xilinx_Answer_71453_QDMA_Performance.docx  Xilinx_Answer_71453_QDMA_Performance_AMD.docx  qdma_drivers_release_checklist.xlsx
docs/specifications/linux/: eqdma_bringup_test_report.xlsx
docs/specifications/windows/: ug03-2000-0160_QDMA.xml
drivers/dpdk/: RELEASE  bsd_license.txt  build.sh  dpdk_build.sh  make_release_package.sh
drivers/dpdk/docs/: README.txt
drivers/dpdk/patches/: README.txt
drivers/linux/: RELEASE  bsd_license.txt  make_libqdma.sh  make_release_package.sh
drivers/linux/docs/: qdma_linuxdriver_sphinx_diagrams.pptx
drivers/qdma_access/: qdma_access_common.c  qdma_access_common.h  qdma_access_errors.h  qdma_access_export.h  qdma_access_version.h  qdma_list.c  qdma_list.h  qdma_mbox_protocol.c  qdma_mbox_protocol.h  qdma_platform.h  qdma_reg_dump.h  qdma_resource_mgmt.c  qdma_resource_mgmt.h
drivers/qdma_access/eqdma_cpm5_access/: eqdma_cpm5_access.c  eqdma_cpm5_access.h  eqdma_cpm5_reg.h  eqdma_cpm5_reg_dump.c
drivers/windows/: QDMA.sln
drivers/windows/docs/: Doxyfile
tests/common/apps/qdma_test/: CMakeLists.txt  ts02_2000_0142_QDMA.xlsx
tests/common/apps/qdma_test/cmake/modules/: Finddpdk.cmake
tests/common/apps/qdma_test/include/: qdma_dpdk.h
tests/common/apps/qdma_test/src/: CMakeLists.txt  main.cpp  test_env.h
tests/common/apps/qdma_test/src/qdma/qdma_common/: example_design_ctrl.h  qdma_instance_abs.h  qdma_queue_abs.h
tests/common/apps/qdma_test/src/qdma/qdma_dpdk/: qdma_device.cpp  qdma_device.h  qdma_instance.cpp  qdma_instance.h  qdma_queue.cpp  qdma_queue.h
tests/common/apps/qdma_test/src/qdma/qdma_linux/: qdma_device.cpp  qdma_device.h  qdma_instance.cpp  qdma_instance.h  qdma_queue.cpp  qdma_queue.h
tests/common/apps/qdma_test/src/qdma/qdma_windows/: qdma_device.cpp  qdma_device.h  qdma_instance.cpp  qdma_instance.h  qdma_queue.cpp  qdma_queue.h
tests/common/apps/qdma_test/src/test/: aio_mm_tests.cpp  aio_st_tests.cpp  debugfs_tests.cpp  dmactl_tests.cpp  mm_tests.cpp  nl_tests.cpp  pcie_tests.cpp  st_tests.cpp  threaded_dma_tests.cpp
tests/common/apps/qdma_test/src/util/: xlnx_util.h
tests/common/apps/qdma_test/src/xlnx/: CMakeLists.txt
tests/common/apps/qdma_test/src/xlnx/xlnx_common/: xlnx_gtest_ext.h  xlnx_os.h
tests/common/apps/qdma_test/src/xlnx/xlnx_dpdk/: xlnx_pci.h
tests/common/apps/qdma_test/src/xlnx/xlnx_linux/: xlnx_device_file.h  xlnx_netlink.h  xlnx_pci.h
tests/common/apps/qdma_test/src/xlnx/xlnx_windows/: xlnx_device_file.h  xlnx_pci.h
tests/common/apps/qdma_test/vs_solution/: packages.config  qdma_test.sln  qdma_test.vcxproj  qdma_test.vcxproj.filters
tests/common/apps/qdma_test/vs_solution/win_helper_src/: getopt.cpp  getopt.h  win_helper.h
tests/linux/apps/unit_test/: CMakeLists.txt  Readme.txt  coverage.sh
tests/linux/apps/unit_test/qdma_access_test/: CMakeLists.txt  eqdma_access_test.cpp  eqdma_access_test.h  main.cpp  qdma_access_common_test.cpp  qdma_platform.cpp  qdma_platform_env.h  qdma_platform_mock.h
tests/linux/apps/unit_test/qdma_access_test/qdma_access/: qdma_access_clear_check  qdma_access_common.c  qdma_access_common.h  qdma_access_errors.h  qdma_access_export.h  qdma_access_version.h  qdma_list.h  qdma_mbox_protocol.c  qdma_mbox_protocol.h  qdma_platform.h  qdma_reg_dump.h  qdma_resource_mgmt.h  t559448t2720t6912.tmp
tests/linux/apps/unit_test/qdma_access_test/qdma_access/eqdma_soft_access/: eqdma_soft_access.c  eqdma_soft_access.h  eqdma_soft_reg.h  eqdma_soft_reg_dump.c
tests/linux/apps/unit_test/qdma_access_test/qdma_access/qdma_s80_hard_access/: qdma_s80_hard_access.c  qdma_s80_hard_access.h  qdma_s80_hard_reg.h  qdma_s80_hard_reg_dump.c
tests/linux/apps/unit_test/qdma_access_test/qdma_access/qdma_soft_access/: qdma_soft_access.c  qdma_soft_access.h  qdma_soft_reg.h
(+1123 files in other folders)
